plugins {
    id 'java'
    id "org.sonarqube" version "3.3"
    id 'org.springframework.boot' version "2.5.7"
    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
}


sonarqube {
    properties {
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.projectKey", "testnav-helsepersonell-service"
        property "sonar.projectName", "testnav-helsepersonell-service"
        property "sonar.organization", "navikt"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.project.monorepo.enabled", true
        property "sonar.login", System.getenv("SONAR_TOKEN")
    }
}
bootJar {
    archiveFileName = "app.jar"
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.4'
    }
}

test {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
    mavenLocal()
}
dependencies {

    implementation 'no.nav.testnav.libs:security-core'
    implementation 'no.nav.testnav.libs:servlet-core'
    implementation 'no.nav.testnav.libs:servlet-security'
    implementation 'no.nav.testnav.libs:data-transfer-objects'

    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap' // TODO remove legacy bootstrap config
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.1'

    implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'
    implementation 'org.hibernate.validator:hibernate-validator'


    testImplementation 'no.nav.testnav.libs:testing'
    testImplementation 'junit:junit:4.13.2' //TODO upgrade to JUnit5
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
    testImplementation 'org.assertj:assertj-core:3.21.0'

    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

java.sourceCompatibility = JavaVersion.VERSION_17
